--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,10 @@
     </style>
 
     <style name="Theme.Notes" parent="Base.Theme.Notes" />
+
+    <style name="Theme.App.SplashScreen" parent = "Theme.SplashScreen">
+         <item name="windowSplashScreenBackground">@color/pink</item>
+         <item name="windowSplashScreenAnimatedIcon">@drawable/image</item>
+         <item name="postSplashScreenTheme">@style/Base.Theme.Notes</item>
+    </style>
 </resources>
