chore:fixed somewhere

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#F88379</color>
     <color name="red">#c13b34</color>
+    <color name="osmon">#7F9F9A</color>
+    <color name="sariq">#F0BA18</color>
 </resources>
