--- a/app/src/main/res/drawable/edittext_border.xml
+++ b/app/src/main/res/drawable/edittext_border.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <stroke
-        android:width="1dp"
-        android:color="@color/pink"/>
+        android:color="#F0BA18"
+        android:width="3dp"/>
 
     <corners
-        android:radius="8dp"/>
+        android:radius="16dp"/>
 
 </shape>
