--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/osmon"
         tools:context=".AddNoteFragment"
         android:padding="12dp">
 
@@ -18,8 +19,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins"
-            android:text="Add Note."
-            android:textColor="@color/red"
+            android:text="Add Note"
+            android:textColor="#3F716D"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -31,7 +32,7 @@
             android:padding="12dp"
             android:textSize="20sp"
             android:layout_below="@id/addNoteHeading"
-            android:background="@drawable/pink_border"
+            android:background="@drawable/edittext_border"
             android:layout_marginTop="16dp"
             android:maxLines="1"
             android:fontFamily="@font/poppins"/>
@@ -45,7 +46,7 @@
             android:padding="12dp"
             android:textSize="18sp"
             android:fontFamily="@font/poppins"
-            android:background="@drawable/pink_border"
+            android:background="@drawable/edittext_border"
             android:layout_below="@id/addNoteTitle"
             android:layout_marginTop="12dp" />
 
