--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="12dp"
+        android:background="@color/osmon"
         tools:context=".EditNoteFragment">
 
         <TextView
@@ -20,7 +21,7 @@
             android:fontFamily="@font/poppins"
             android:text="Edit Note."
             android:textStyle="bold"
-            android:textColor="@color/red"
+            android:textColor="#3F716D"
             android:textSize="24sp" />
 
         <EditText
@@ -29,9 +30,10 @@
             android:layout_height="60dp"
             android:hint="Enter the title"
             android:padding="12dp"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_below="@id/editNoteHeading"
-            android:background="@drawable/pink_border"
+            android:background="@drawable/edittext_border"
             android:layout_marginTop="16dp"
             android:maxLines="1"
             android:fontFamily="@font/poppins"/>
@@ -40,14 +42,14 @@
             android:id="@+id/editNoteDesc"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Enter the description"
-            android:gravity="top"
-            android:padding="12dp"
-            android:textSize="18sp"
-            android:fontFamily="@font/poppins"
-            android:background="@drawable/pink_border"
             android:layout_below="@id/editNoteTitle"
-            android:layout_marginTop="12dp" />
+            android:layout_marginTop="9dp"
+            android:background="@drawable/edittext_border"
+            android:fontFamily="@font/poppins"
+            android:gravity="top"
+            android:hint="Enter the description"
+            android:padding="12dp"
+            android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/editNoteFab"
@@ -56,7 +58,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:clickable="true"
-            android:backgroundTint="@color/pink"
+            android:backgroundTint="#3F716D"
             android:tintMode="@color/white"
             android:src="@drawable/baseline_done_24"
             android:layout_alignParentBottom="true"
