--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/osmon"
         tools:context=".HomeFragment">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -15,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="28dp"
-            android:backgroundTint="@color/pink"
+            android:backgroundTint="#3F716D"
             android:clickable="true"
             android:contentDescription="image"
             android:tintMode="@color/white"
@@ -38,7 +39,7 @@
             android:layout_height="match_parent"
             android:id="@+id/emptyNotesImage"
             android:visibility="gone"
-            android:src="@drawable/img"/>
+            android:src="@drawable/img_1"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
