--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@drawable/pink_border"
+            android:background="#B7D1CF"
             android:padding="16dp">
 
             <TextView
@@ -22,7 +22,7 @@
                 android:layout_height="0dp"
                 android:id="@+id/noteTitle"
                 android:layout_weight="200"
-                android:textColor="@color/red"
+                android:textColor="#3F716D"
                 android:fontFamily="@font/poppins"
                 android:text="@string/note_title"
                 android:textStyle="bold"
@@ -37,7 +37,7 @@
                 android:text="@string/description"
                 android:textSize="14sp"
                 android:fontFamily="@font/poppins"
-                android:textColor="@color/pink"/>
+                android:textColor="#3F716D"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
