--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,12 +3,12 @@
     <style name="Base.Theme.Notes" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorPrimary">@color/pink</item>
-        <item name="colorPrimaryVariant">@color/pink</item>
+        <item name="colorPrimary">#3F716D</item>
+        <item name="colorPrimaryVariant">#3F716D</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/pink</item>
-        <item name="colorSecondaryVariant">@color/pink</item>
+        <item name="colorSecondary">#3F716D</item>
+        <item name="colorSecondaryVariant">#3F716D</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
@@ -17,9 +17,4 @@
 
     <style name="Theme.Notes" parent="Base.Theme.Notes" />
 
-    <style name="Theme.App.SplashScreen" parent = "Theme.SplashScreen">
-         <item name="windowSplashScreenBackground">@color/pink</item>
-         <item name="windowSplashScreenAnimatedIcon">@drawable/image</item>
-         <item name="postSplashScreenTheme">@style/Base.Theme.Notes</item>
-    </style>
 </resources>
