--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,13 +14,13 @@
             android:id="@+id/addNoteFab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="28dp"
+            android:layout_marginBottom="140dp"
             android:backgroundTint="#3F716D"
             android:clickable="true"
             android:contentDescription="image"
             android:tintMode="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/baseline_add_24" />
 
@@ -38,8 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/emptyNotesImage"
-            android:visibility="gone"
-            android:src="@drawable/img_1"/>
+            android:visibility="visible"
+            android:src="@drawable/n"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
